Added code to synch date first enrolled into hiv and the encounter date

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -803,7 +803,7 @@ jq(function() {
 <div class="ke-form-header">
 	<table style="width: 100%">
 		<tr>
-			<td>Date: <encounterDate id="encounter-date" showTime="false"/></td>
+			<td>Enrollment date: <encounterDate id="encounter-date" showTime="false"/></td>
 			<td>Enrolled at: <encounterLocation id="site" default="GlobalProperty:kenyaemr.defaultLocation"/></td>
 		</tr>
 	</table>
