--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -213,7 +213,7 @@ function setDatePositive()
 	{
 		//alert(p1) ;
 		var yy=p1.getFullYear();
-		var mm=p1.getMonth();
+		var mm=p1.getMonth() + 1;
 		var dd=p1.getDate() ;
 
 		dpos=yy + "-" + ("0"+ mm).slice(-2) + "-" + ("0"+dd).slice(-2);
@@ -228,7 +228,7 @@ function setDateEnrolled()
 	if (p1 !== 'undefined')
 	{
 		var yy=p1.getFullYear();
-		var mm=p1.getMonth();
+		var mm=p1.getMonth() + 1;
 		var dd=p1.getDate() ;
 
 		d=yy + "-" + ("0"+ mm).slice(-2) + "-" + ("0"+dd).slice(-2);
@@ -242,7 +242,7 @@ function setTIDate(){
 	if (p1 !== 'undefined')
 	{
 		var yy=p1.getFullYear();
-		var mm=p1.getMonth();
+		var mm=p1.getMonth() + 1;
 		var dd=p1.getDate() ;
 
 		d=yy + "-" + ("0"+ mm).slice(-2) + "-" + ("0"+dd).slice(-2);
@@ -284,7 +284,7 @@ function setTIHaartDate(){
 	if (p1 !== 'undefined')
 	{
 		var yy=p1.getFullYear();
-		var mm=p1.getMonth();
+		var mm=p1.getMonth() + 1;
 		var dd=p1.getDate() ;
 
 		d=yy + "-" + ("0"+ mm).slice(-2) + "-" + ("0"+dd).slice(-2);
