updated face page

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -160,7 +160,7 @@ function setEntryPoint(){
 
 function setTsName()
 {
-    var p1="<lookup xpression="fn.latestObs(160638).valueText" />"
+    var p1="<lookup expression="fn.latestObs(160638).valueText" />"
     if (p1 !== 'undefined')
     {
         setValue('ts_name.value',p1) ;
