--- a/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
@@ -134,10 +134,18 @@
 		<fieldset>
 			<legend>Reason</legend>
 
-			<table>
+			<table cellspacing="5">
+				<tr>
+					<th></th>
+					<th></th>
+					<th>Recent</th>
+				</tr>
 				<tr>
 					<td>Reason for visit</td>
 					<td><obs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="2" cols="80"/></td>
+					<td>
+						<span class="value"><recentObs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span>
+					</td>
 				</tr>
 			</table>
 		</fieldset>
@@ -145,26 +153,38 @@
 		<fieldset>
 			<legend>Vital Signs</legend>
 
-			<table>
+			<table cellspacing="5">
+				<tr>
+					<th></th>
+					<th>Current</th>
+					<th>Recent</th>
+				</tr>
 				<tr>
 					<td>Temp</td>
 					<td><obs conceptId="5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> &#176;C</td>
+					<td>
+						<span class="value"><recentObs conceptId="5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span>
+					</td>
 				</tr>
 				<tr>
 					<td>Pulse Rate</td>
 					<td><obs conceptId="5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span></td>
 				</tr>
 				<tr>
 					<td>BP</td>
 					<td><obs  conceptId="5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/> / <obs conceptId="5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+					<td><span class="value"><recentObs conceptId="5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/> / <recentObs conceptId="5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span></td>
 				</tr>
 				<tr>
 					<td>Respiratory Rate</td>
 					<td><obs conceptId="5242AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="5242AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span></td>
 				</tr>
 				<tr>
 					<td>Oxygen Saturation</td>
 					<td><obs conceptId="5092AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="5092AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span></td>
 				</tr>
 			</table>
 		</fieldset>
@@ -172,7 +192,7 @@
 		<fieldset>
 			<legend>Other Recordings</legend>
 
-			<table>
+			<table cellspacing="10">
 				<tr>
 					<th> </th>
 					<th>Current</th>
@@ -181,12 +201,12 @@
 				<tr>
 					<td>Weight</td>
 					<td><obs id="weight" conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />kg</td>
-					<td><recentObs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span></td>
 				</tr>
 				<tr>
 					<td>Height</td>
 					<td><obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />cm</td>
-					<td><recentObs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span></td>
 				</tr>
 				<tr>
 					<td>BMI</td>
@@ -196,13 +216,13 @@
 				<tr>
 					<td>MUAC</td>
 					<td><obs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-					<td><recentObs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td><span class="value"><recentObs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span></td>
 				</tr>
 				<includeIf velocityTest="$patient.gender == 'F' ">
 					<tr>
 						<td>LMP</td>
 						<td><obs id="lmp-date" conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-						<td><recentObs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+						<td><span class="value"><recentObs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></span></td>
 					</tr>
 				</includeIf>
 			</table>
