Fixed tb discontinuation PT requests 87618080 and 87618000

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -769,7 +769,7 @@ jq(function() {
     setArtStatus();
 
     //getField('ts_rship.value').change(setTsRelation);
-    setTsRelation();
+    //setTsRelation();
 
     //getField('ts_name.value').change(setTsName);
     setTsName();
