--- a/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbDiscontinuation.html
@@ -49,11 +49,11 @@
 						getField('treatment_outcome.error').html('Missing treatment outcome').show();
 						return false;
 					}
-					if ((getValue('treatmentoutcomedate.value') == "")){
+					/*if ((getValue('treatmentoutcomedate.value') == "")){
 						getField('treatmentoutcomedate.error').html('Missing treatment outcome date').show();
 						return false;
 
-					}
+					}*/
 					if (getValue('treatment_outcome.value') == 159492){
 						if(getValue('transferredoutto.value') == ""){
 							getField('transferredoutto.error').html('Missing transfer to facility').show();
