Removed unrecognized characters in the forms

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -207,7 +207,7 @@
 					<td colspan="3" style="background-color: #696969; color: #ffffff;">MILESTONES</td>
 				</tr>
 				<tr>
-					<td colspan="2">    a
+					<td colspan="2">
 						<table width="100%">
 							<tr>
 								<th colspan="2">Development Milestones by Age</th>
