--- a/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
@@ -239,7 +239,7 @@
 								<td colspan="2"><div id="referalDateError" class="error"></div></td>
 							</tr>
 						</table>
-					</fieldset>set>
+					</fieldset>
 				</td>
 			</tr>
 			<tr>
