--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -1016,9 +1016,7 @@ jq(function() {
             </tr>
             <tr>
                 <td>Date Enrolled in HIV Care</td>
-                <td><obs id="date_Enrolled" conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-                    <span style="display: none;"><lookup id="hivenrolldate" expression="fn.latestObs(160555).valueDatetime"/></span>
-                </td>
+                <td><obs id="date_Enrolled" conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
                 <td>WHO Stage
 
                     <span id="initialWhoStageAd"><obs id="whostage" conceptId="160553AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
