--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -136,6 +136,39 @@
 				</tr>
 			</table>
 		</fieldset>
+		<fieldset>
+			<legend>Cotrimoxazole</legend>
+			<table>
+				<tr>
+					<td>
+						<table cellpadding="0" border="0" cellspacing="5">
+							<tr>
+								<td>Adherence</td>
+								<td>
+									<obs
+											conceptId="161652AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerConceptIds="159405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159406AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="Good (G),Fair (F),Poor (P)"
+											style="radio"
+											/>
+								</td>
+							</tr>
+							<tr>
+								<td>Dispensed</td>
+								<td>
+									<obs
+											conceptId="162229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="Yes,No,Not applicable (N/A)"
+											style="radio"
+											/>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</fieldset>
 
 		<fieldset>
 			<legend>Decision Points</legend>
