Include a way to recored low detactable viral load

--- a/omod/src/main/webapp/resources/htmlforms/labResults.html
+++ b/omod/src/main/webapp/resources/htmlforms/labResults.html
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="ke-form-content">
-		<table style="width: 100%">
+		<table style="width: 80%">
 			<tr>
 				<th> </th>
 				<th>Test</th>
@@ -60,10 +60,18 @@
 
 			</tr>
 			<tr>
-				<td>06.</td>
+				<td>06 (a).</td>
 				<td>HIV Viral Load</td>
-				<td><obs conceptId="856AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showUnits="true" dateLabel="&lt;/td&gt;&lt;td&gt;"/></td>
+				<td>
+					<obs conceptId="856AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showUnits="true" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 
+				</td>
+
+			</tr>
+			<tr>
+				<td>06 (b).</td>
+				<td>HIV Viral Load(LDL)</td>
+				<td><obs conceptId="1305AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="LDL" dateLabel="&lt;/td&gt;&lt;td&gt;"/></td>
 			</tr>
 			<tr>
 				<td>07.</td>
