--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -74,6 +74,9 @@ function onWeightOrHeightChange() {
 function onEncounterDateChange() {
     var patientId = <lookup expression="patient.patientId"/>;
     var encDate = getValue('encounter-date.value');
+    if(encDate == null) {
+        encDate = new Date();
+    }
 
     jq.getJSON('/' + OPENMRS_CONTEXT_PATH + '/kenyaemr/emrUtils/durationSinceStartArt.action', { patientId: patientId, now: encDate })
             .done(function(data) {
@@ -195,7 +198,7 @@ jq(function() {
 
     onWeightOrHeightChange();
     onEncounterDateChange();
-
+    setValue('encounter-date.value', "");
     beforeSubmit.push(function() {
         var encounterDate = new Date(getValue('encounter-date.value')).getTime();
         var nextAptDate = new Date(getValue('next-apt-date.value')).getTime();
