Only HIV positive patients get to be displayed in the reports for hiv Removal of default enrollment dates on hiv enrollment form and moh257 visit summary Remove of NPE in cohort reports

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -93,7 +93,16 @@
 	<div class="ke-form-header">
 		<table style="width: 100%">
 			<tr>
-				<td>Enrollment date: <encounterDate id="encounter-date" showTime="true" /></td>
+				<td>
+					<ifMode mode="ENTER">
+						<script type="text/javascript">
+							jq(function(){
+								setValue("encounter-date.value", "");
+							});
+						</script>
+					</ifMode>
+					Enrollment date: <encounterDate id="encounter-date" showTime="false" />
+				</td>
 				<td>Enrolled by: <encounterProvider default="currentUser" /></td>
 				<td>Enrolled at: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 			</tr>
